# example-socs

./: .gitignore  .gitlab-ci.yml  LICENSE.md  Makefile  README.md  chipflow.toml  pyproject.toml
.github/workflows/: main.yaml
chipflow_examples/common/: sim_platform.py  wrapper.py
chipflow_examples/common/models/: spiflash.cc  spiflash.h  wb_mon.cc
chipflow_examples/common/software/: bios.mk  dockcross-linux-riscv32  soft_gen.py
chipflow_examples/common/software/drivers/: spiflash.S  spiflash.h
chipflow_examples/minimal/: sim_soc.py  soc.py
chipflow_examples/minimal/prebuilt/: .gitignore  README.md
chipflow_examples/minimal/sim/: Makefile
chipflow_examples/mpw5/: sky130.py  soc.py  ulx3s.py
chipflow_examples/mpw5/scripts/: pnr_timing_tas.tcl
chipflow_examples/mpw5/sim/: Makefile  print_yosys_datdir.py
chipflow_examples/mpw5/software/: Makefile  mmode.h
example_socs/common/: sky130_platform.py  wrapper.py
example_socs/common/misc/: write_netlist.ys
example_socs/common/models/: hyperram.cc
example_socs/common/software/: bios.mk
example_socs/common/software/drivers/: uart.c
example_socs/minimal/: soc.py
example_socs/minimal/sim/: Makefile
example_socs/minimal/software/: main.c
example_socs/mpw5/: sim_soc.py  sky130.py  soc.py
example_socs/mpw5/scripts/: extract_openrcx.tcl  pnr_timing_opensta.tcl  pnr_timing_tas.tcl  splice_lef_resistance.py  syn_timing_opensta.tcl
example_socs/mpw5/sim/: Makefile  main.cc
example_socs/mpw5/software/: .gitignore  Makefile  main.c  riscv_csr.h  sections.lds  start.s
example_socs/mpw5/software/drivers/: plat_timer.c  plat_timer.h  spiflash.c
lib/chipflow/: README.md  pyproject.toml
lib/chipflow/chipflow/: chip_wrapper.py  cli.py  config.py  sim_platform.py  sky130_platform.py
lib/chipflow/chipflow/contexts/: board.py  silicon.py  sim.py
lib/chipflow/chipflow/models/: hyperram.cc  log.cc  log.h  spiflash.cc  spiflash.h  uart.cc  wb_mon.cc  wb_mon.h
lib/chipflow/chipflow/providers/: base.py  board_ulx3s.py  silicon.py  sim.py
lib/chipflow/chipflow/sim/: doit_build.py
lib/chipflow/chipflow/sky130_scripts/: split_inv_clocks.py
lib/chipflow/chipflow/software/: bios.mk  dockcross-linux-riscv32  doit_build.py  soft_gen.py
lib/chipflow/chipflow/software/drivers/: gpio.h  plat_timer.c  plat_timer.h  soc_id.h  spiflash.c  spiflash.h  uart.c  uart.h
my_design/: chipflow.py  cv32e40p_wrapper.py  design.py  sky130.py
my_design/my_contexts/: board.py  silicon.py  sim.py  software.py
my_design/openocd/: cv32e40p.cfg
my_design/scripts/: syn_timing_tas.tcl
my_design/sim/: Makefile  doit_build.py  main.cc
my_design/software/: Makefile  doit_build.py  main.c  mmode.c
my_design/steps/: board.py  silicon.py  sim.py  software.py
my_design/verilog/: dm_wrap_conv_sv2v.v  riscv_core_conv_sv2v.v
tests/: test_board_builds.py  test_rtlil.py  test_silicon_prepare.py  test_simulation_runs.py  test_ulx3s_builds.py
