# Project metadata

[project]
name = "example-socs"
version = "0.0.0"
description = "ChipFlow examples for making chips!"
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
    {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = "~=3.8"
dependencies = [
  "amaranth>=0.5,<0.6",
  "amaranth-vexriscv @ git+https://github.com/ChipFlow/amaranth-vexriscv",
  "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib",
  "ziglang==0.11.0",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "pytest~=8.0",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.env = {PYTHONWARNINGS = "error"}
test.cmd = "pytest"
