[tool.poetry]
name = "chipflow"
version = "0.1.0"
description = "ChipFlow common tools."
authors = [
    "Robert Taylor <rob.taylor@chipflow.io>", 
    "Ross Motley <ross.motley@chipflow.io>"
]

[tool.poetry.dependencies]
python = "^3.8"
amaranth = { git = "https://github.com/amaranth-lang/amaranth.git" }
amaranth-soc = { git = "https://github.com/amaranth-lang/amaranth-soc.git" }
amaranth-boards = { git = "https://github.com/amaranth-lang/amaranth-boards.git" }
amaranth-stdio = { git = "https://github.com/amaranth-lang/amaranth-stdio.git" }
amaranth-orchard = { git = "https://gitlab.com/ChipFlow/amaranth-orchard.git" }
yowasp-yosys = "^0.23.dev444"
amaranth-vexriscv = {version = "0.*", source = "chipflow"}
pytest = "^7.2.0"
yowasp-nextpnr-ecp5 = "^0.4.post25.dev361"
tomli = "^2.0.1"
doit = "^0.36.0"

[[tool.poetry.source]]
name = "chipflow"
url = "https://gitlab.com/api/v4/projects/33096707/packages/pypi/simple"
default = false
secondary = false

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
